--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/lucy-mitchell.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/lucy_mitchell_index_profile.jpeg" class="attachment-blog-thumb wp-post-image" alt="lucy_mitchell">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Lucy Mitchell</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">The basis of optimism is sheer terror</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I like organising, baked goods, bikes, science fiction, and leaving social events without telling anyone</p>
                 </div>
                 <div class="clear"></div>
               </li>
@@ -143,7 +143,33 @@
                 <div class="clear"></div>
               </li>
               <!-- End Student 2 -->
-              
+
+              <!-- Begin Student 3 -->
+              <li class="home-blog-post">
+                <div class="blog-thumb">
+                  <a href="students/student_name.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  </a>
+                </div>
+
+                <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>
+                      <a href="students/student_name.html">Student Name</a>
+                    </h3>
+                  </div>
+                  <p class="home-blog-post-meta">Tag Line</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Excerpt.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
+              <!-- End Student 3 -->
+
+
               <!-- Duplicate li code block above to place more students here -->
 
             </ul>
