--- a/students/lucy-mitchell.html
+++ b/students/lucy-mitchell.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/lucy_mitchell_background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Lucy Mitchell</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,14 +94,14 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/lucy_mitchell_index_profile.jpeg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Lucy Mitchell</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"Countless worlds made from nothing by use of symbols" -Nelson Goodman.</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut.
+                   I like organising, baked goods, bikes, science fiction, and leaving social events without telling anyone
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>Occupational Therapy MSc</li>
+                  <li>Anthropology and Linguistics BA</li>
                 </ul>
               </div>
             </div>
@@ -158,9 +158,13 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4>recruitment</h4>
+                <h4>Bakeries</h4>
+                <h4>Coffee Shops</h4>
+                <h4>Healthcare</h4>
+                <h4>Charity Events</h4>
                 <p>
-                  Blurb about company...
+                  You name it, i’ve been paid minimum wage for it
                 </p>
               </div>
             </div>
@@ -259,9 +263,9 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
+                      <a>Vancouver</a><br>
+                      <a>Tokyo</a><br>
+                      <a>Adelaide</a><br>
                       <a>New York</a><br>
                     </p>
                   </div>
@@ -273,9 +277,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="#">http://www.manncat.com/webcams.php</a><br>
+                    - Favorite Comic: <a href="#">Doomsday Clock</a><br>
+                    - Favorite Podcast: <a href="#">Stuff You Should Know</a><br>
                   </p>
                 </div>
               </div>
