--- a/index.html
+++ b/index.html
@@ -122,28 +122,28 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/hanna_solomon.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/hanna_solomon_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Hanna Solomon">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Hanna Solomon</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">I <3 trampolines</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Graphic Designer turned Florist turned Coder!!!</p>
                 </div>
                 <div class="clear"></div>
               </li>
               <!-- End Student 2 -->
-              
+
               <!-- Duplicate li code block above to place more students here -->
 
             </ul>
