--- a/students/hanna_solomon.html
+++ b/students/hanna_solomon.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/hanna_solomon_background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Hanna Solomon</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,18 +94,18 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/hanna_solomon_profile.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Hanna Solomon</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
+          <a href="https://twitter.com/hanna_soloman"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://github.com/hsolomon83"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"You do not really understand something unless you can explain it to your grandmother" - Albert Einstein</h3>
                 </div>
               </li>
             </ul>
@@ -138,7 +138,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                Setup and run a florist for the last 10 years!
                 </p>
               </div>
             </div>
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>BA Graphic Design - University of Arts London</li>
+
                 </ul>
               </div>
             </div>
@@ -158,9 +158,10 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
+                <h4></h4>
                 <p>
-                  Blurb about company...
+                  <a href="http://sweetpea.design/">Sweetpea Florist Hampstead</a> is located close to the stunning surroundings of
+                  Hampstead Heath, providing a vast variety of floral arrangements.
                 </p>
               </div>
             </div>
@@ -259,10 +260,10 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      <a>Buenos Aires</a><br>
-                      <a>Barcelona</a><br>
-                      <a>Minneapolis</a><br>
-                      <a>New York</a><br>
+                      <a>Lisbon</a><br>
+                      <a>Vienna</a><br>
+                      <a>Berlin (not in the winter)</a><br>
+                      <a>Rome</a><br>
                     </p>
                   </div>
                 </div>
@@ -273,9 +274,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="https://coolors.co">Coolors</a><br>
+                    - Favorite Comic: <a href="https://en.wikipedia.org/wiki/Spider-Man"></a>Spiderman<br>
+                    - Favorite Radio Program: <a href="http://shoptalkshow.com/">Shoptalk Show</a><br>
                   </p>
                 </div>
               </div>
@@ -350,7 +351,7 @@
     </div>
   </div>
   <!-- End Footer -->
-  
+
   <script type='text/javascript' src="../js/jquery.js"></script>
   <script type='text/javascript' src="../js/smooth-scroll.js"></script>
   <script type="text/javascript">
