index and profile update for jigar

--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
               <!-- Begin Jigar (Student 1) -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/jigar-polra.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/jigar_polra_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Jigar Polra">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/jigar_polra.html">Jigar Polra</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Be who you are and say what you want, because those who mind don't matter and those who matter don't mind</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Born and raised in East London. I've graduated and I'm looking to move into e-commerce. I am a huge fan of street photography. My photos can be found on vsco.com/Jig_R</p>
                 </div>
                 <div class="clear"></div>
               </li>
