--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- Begin Title Content -->
       <div class="page-title">
         <h2>Every Story Has Heroes</h2>
-        <h3>We're 32 people on a journey to learn to love code.</h3>
+        <h3>We're 8 people on a journey to learn to love code.</h3>
       </div>
       <!-- End Title Content -->
 
@@ -85,7 +85,7 @@
       <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
         <div class="section section-services student-index">
           <div class="section-title">
-            <span>Flatiron School Class 003</span>
+            <span>Flatiron School Class 040618</span>
           </div>
         </div>
 
@@ -98,22 +98,22 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/hugo.jpeg" class="attachment-blog-thumb wp-post-image" alt="Hugo's picture">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Hugo</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Curious</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I got the cookies.</p>
                 </div>
                 <div class="clear"></div>
               </li>
