--- a/students/Gabriel Miranda.html
+++ b/students/Gabriel Miranda.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/student_name_background.jpg) no-repeat top center;
+      background: url(../img/students/Gabriel_Background.jpg) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Gabriel Miranda</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -94,14 +94,14 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/student_name_profile.jpg" class="student_pic">
+          <img src="../img/students/Gabriel_profile.jpg" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">Gabriel Miranda</h4>
         <div class="social-icons">
           <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
@@ -114,7 +114,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>"The only thing I know is that I know nothing" </h3>
                 </div>
               </li>
             </ul>
@@ -138,8 +138,8 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
-                </p>
+I was born in brazil but moved around a lot. I went to elementary school in Brazil, Middle school in Nigeria and high school in Tanzania. I came to the Uk to study Mechanical Engineering
+                  </p>
               </div>
             </div>
 
@@ -148,8 +148,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>University</li>
-                  <li>Other School</li>
+                  <li>University of Bolognia</li>
+                  <li>Interternational School </li>
                 </ul>
               </div>
             </div>
@@ -350,7 +350,7 @@
     </div>
   </div>
   <!-- End Footer -->
-  
+
   <script type='text/javascript' src="../js/jquery.js"></script>
   <script type='text/javascript' src="../js/smooth-scroll.js"></script>
   <script type="text/javascript">
