Updating Louis's Github User

--- a/students/louis_raymond.html
+++ b/students/louis_raymond.html
@@ -103,7 +103,7 @@
       <div class="page-title">
         <h4 class="ib_main_header">Louis Raymond</h4>
         <div class="social-icons">
-          <a href="https://uk.linkedin.com/in/louisraymond93"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://uk.linkedin.com/in/louisraymond"><i class="icon-linkedin-sign ib-social-icons"></i></a>
           <a href="https://github.com/louisraymond93"><i class="icon-github ib-social-icons"></i></a>
         </div>
 
