--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Hugo</a>
+                      <a href="students/hugo.html">Hugo</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Curious</p>
@@ -130,7 +130,7 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Allegra</a>
+                      <a href="students/allegra.html">Allegra</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">Allegra is really cool</p>
