--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/hugo.html">
                     <img width="304" height="304" class="prof-image" src="img/students/hugo.jpeg" class="attachment-blog-thumb wp-post-image" alt="Hugo's picture">
                   </a>
                 </div>
@@ -122,7 +122,7 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
+                  <a href="students/allegra.html">
                     <img width="304" height="304" class="prof-image" src="img/students/profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
