Updated Links to Profile Pages

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
               <!-- Begin Gabriel (Student 2)-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/Gabriel_Profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/gabriel_miranda.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/Gabriel_Profile.jpg" class="attachment-blog-thumb wp-post-image" alt="gabriel_miranda">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Gabriel Miranda</a>
+                      <a href="students/gabriel_miranda.html">Gabriel Miranda</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">"The only thing I know is that I know nothing"</p>
@@ -149,15 +149,15 @@
               <!-- Begin Louis (Student 3)-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/louis_raymond_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/louis_raymond.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/louis_raymond_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="louis_raymond">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Louis Raymond</a>
+                      <a href="students/louis_raymond.html">Louis Raymond</a>
                     </h3>
                   </div>
                   <p class="home-blog-post-meta">L.O.U.I.s</p>
