--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header">
         <div class="header-left">
           <h1 class="logo-text">
-            <a href="/" title="The Flatiron School">
+            <a href="index.html" title="The Flatiron School">
               <img src="img/the-flatiron-school-logo-sm-black.png" class="logo">
             </a>
           </h1>
@@ -97,7 +97,7 @@
               <!-- Begin Jigar (Student 1) -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/jigar-polra.html">
+                  <a href="students/jigar_polra.html">
                     <img width="304" height="304" class="prof-image" src="img/students/jigar_polra_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Jigar Polra">
                   </a>
                 </div>
