--- a/students/vasile.html
+++ b/students/vasile.html
@@ -74,14 +74,14 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Rishi</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Vasile</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
-          <li>|</li>
+          <li>Me|</li>
           <li><a href="#scroll-coder-cred">Coder Cred</a></li>
-          <li>|</li>
+          <li>My cred|</li>
           <li><a href="#scroll-recently">Recently</a></li>
-          <li>|</li>
+          <li>Me recently|</li>
           <li><a href="#scroll-favorites">Favorites</a></li>
         </ul>
       </div>
